[package]
name = "factom-api"
version = "0.2.1"
authors = ["Sergey Bushnyak <sergey.bushnyak@sigrlami.eu>"]
edition = "2018"
repository = "https://github.com/kompendium-ano/factom-rust-client-ng"
homepage = "https://github.com/kompendium-ano/factom-rust-client-ng"
license = "MIT"
readme = "README.md"
description = "Factom API client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1.0"
bytes = "0.5.2"
http = "0.2"
futures = "0.3.1"
futures-util = "0.3.1"
serde_json = "1.0.44"
serde_derive = "1.0.103"
serde = { version = "1.0.103", features = ["derive"] }
hyper-tls = "0.4.0"
hyper = "0.13.0"
